--- a/src/main/webapp/hello.xhtml
+++ b/src/main/webapp/hello.xhtml
@@ -6,8 +6,7 @@
 	xmlns:ui="http://java.sun.com/jsf/facelets">
 
 <h:head>
-	<title></title>
-	<link type="text/css" rel="stylesheet" href="css/styles.css" />
+	<title>Simple JSF Hello World</title>
 </h:head>
 
 <h:body>
@@ -19,8 +18,6 @@
 		<h:commandButton action="#{helloBean.sayHello}" value="Submit"/>
 		<p><h:outputText rendered="#{!empty helloBean.name}" value="Hello #{helloBean.name}"/></p>
 	</h:form>
-
-	
 
 </h:body>
 </html>
